<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="25dp"
    app:cardElevation="30dp"
    app:contentPaddingTop="10dp"
    tools:context=".ShowEmployeeActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        >


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start">

            <TextView
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/name"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/firstname"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/name_txt"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="name" />

            <ImageButton
                android:id="@+id/delete_id"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="120dp"
                android:layout_toEndOf="@id/firstname"
                android:background="@null"
                android:foregroundGravity="center"
                android:src="@drawable/icons8delete30" />

            <ImageButton
                android:id="@+id/update_id"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/delete_id"
                android:background="@null"
                android:foregroundGravity="center"
                android:src="@drawable/updatebtn" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lastname_relativ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lastname_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/last_name_lab"
                android:textSize="25sp"

                />

            <TextView
                android:id="@+id/lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="11dp"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="@id/lastname_txt"
                tools:text="@string/l_name" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/designation_relativ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Designation_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/designation"
                android:textSize="25sp"

                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"

                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="designation" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/address_relativ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/phone_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/phone"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/phone"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="11dp"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="phone" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>